--- a/src/styles/_contact.less
+++ b/src/styles/_contact.less
@@ -135,14 +135,16 @@
   }
 }
 
+@credits-container-margin: 20px;
 
 @media (max-width: 800px) {
   .contact-container {
     display: block;
 
     .credits-container {
-      margin-left: 20px;
-      margin-right: 20px;
+      width: 100% - @credits-container-margin * 2;
+      margin-left: @credits-container-margin;
+      margin-right: @credits-container-margin;
     }
 
     .form-container {
