--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -257,21 +257,22 @@ header .header-content .header-button {
   background: #f8f8f8;
 }
 .about-us {
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 .about-us .about-us-description {
   display: flex;
-  margin: 20px;
+  margin-top: 70px;
+  margin-bottom: 70px;
+  text-align: justify;
   justify-content: center;
   -webkit-flex-flow: row wrap;
 }
 .about-us .about-us-description p {
+  width: calc(50% - 15px * 2);
   margin-left: 15px;
   margin-right: 15px;
-  max-width: 500px;
 }
 .about-us .about-us-carousel {
   list-style: none;
@@ -807,6 +808,7 @@ header .header-content .header-button {
     display: block;
   }
   .contact-container .credits-container {
+    width: 60%;
     margin-left: 20px;
     margin-right: 20px;
   }
